# mycal

./: .gitignore  Cargo.toml  future.md  run-featscore.py  run.py  webcal-run.py
src/: classifier.rs  compress.rs  extsort.rs  index.rs  lib.rs  lrucache.rs  main.rs  odch.rs  ptuple.rs  sledhash.rs  store.rs  tok.rs  utils.rs  uuid.rs
