[package]
name = "mycal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.28", features = ["derive"] }
kdam = "0.6.2"
porter-stemmer = "0.1.2"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
flate2 = { version = "1.0.35", features = ["zlib-ng"], default-features = false }
sled = "0.34.7"
kv = { version = "0.24.0", features = ["bincode-value"] }
ordered-float = "4.6.0"
min-max-heap = "1.3.0"

[profile.profiling]
inherits = "release"
debug = true
