[package]
name = "mycal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
kdam = "0.6.2"
porter-stemmer = "0.1.2"
rand = "0.9.0"
serde_json = "1.0.138"
flate2 = { version = "1.0.35", features = [
    "zlib-ng",
], default-features = false }
sled = "0.34.7"
ordered-float = "4.6.0"
min-max-heap = "1.3.0"
unicode-segmentation = "1.10.1"
unicode-normalization = "0.1.20"
rust_tokenizers = "8.1.1"
log = "0.4.26"
env_logger = "0.11.7"
bincode = { version = "2.0.1", features = ["derive"] }
bytesize = "2.0.1"
rayon = "1.10.0"
lz4_flex = "0.11.3"
bitvec = "1.0.1"
uuid = { version = "1.16.0", features = ["v4"] }
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.20"
actix-web = "4.10.2"
actix-web-helmet = "0.2.0"

[profile.profiling]
inherits = "release"
debug = true
